--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hola </h1>
+<!DOCTYPE html>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./master.css">
+    <title>SI 2810</title>
+  </head>
+  <body>
+    <h1>Hola</h1>
+  </body>
+</html>
