Se modifica el contenido

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>SI 2810</title>
   </head>
   <body>
-    <h1>Hola</h1>
+    <h1>Sistemas de Informacion</h1>
+    <img class="imagen" src="./sistemas.jpg" alt="Sistemas">
+    <section>
+      <article>
+        <p>Marco Antonio Nava Cruz</p>
+        <p>Ingenieria en Computacion</p>
+      </article>
+    </section>
+
   </body>
 </html>
